--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<h1>New movie list</h1>
+
+<%# // BUTTON // %>
+<%= link_to 'Back to movie list',  lists_path %>
