--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,9 @@
 <h1><%= @list.name %></h1>
+<ul>
+    <% @movies.each do |l| %>
+      <li> <%= link_to l.name, lists_show_path(l.id) %> </li>
+       <% end %>
+</ul>
+
+
 <p>Find me in app/views/lists/show.html.erb</p>
